# ProjetGPGPU2026

./: CMakeLists.txt  README.md
original_files/: JPEG_Encoder_code_source_2.cpp  genCosValues_code_source_1.cpp  main_Ex1_DCT_direct.cpp  main_Ex2_DCT_Inverse.cpp  main_Ex3_Quantification.cpp
src_test_original/: CMakeLists.txt  JPEG_Decoder_code_source_3.cpp  JPEG_Encoder_code_source_2.cpp  main_Ex2_DCT_Inverse.cpp  main_code_source_4.cpp
